--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ WallpaperChanger/x64/Debug/Initialised.txt
 *.ilk
 *.obj
 *.suo
+WallpaperChanger/.vs/WallpaperChanger/v17/Browse.VC.opendb
+WallpaperChanger/.vs/WallpaperChanger/v17/Browse.VC.db-wal
