Cleaned up code
Cleaned up code by correcting naming schemes and moving the entry point of the application to a Main.cpp.

--- a/WallpaperChanger/WallpaperChanger/WallpaperChanger.vcxproj
+++ b/WallpaperChanger/WallpaperChanger/WallpaperChanger.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="WallpaperChanger.cpp" />
   </ItemGroup>
   <ItemGroup>
