--- a/WallpaperChanger/WallpaperChanger/WallpaperChanger.vcxproj.filters
+++ b/WallpaperChanger/WallpaperChanger/WallpaperChanger.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="WallpaperChanger.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WallpaperChanger.hpp">
